[package]
name = "cmdy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
indicatif = "0.17"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
fs = "0.0.5"